fix: fix hero and services spacing, element placement, font sizes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,3 +86,7 @@ input[type="radio"] {
   -moz-appearance: none !important;
   appearance: none !important;
 }
+
+* {
+  /* border: 1px solid red; */
+}
